# naive_website

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
src/: db.sqlite3  manage.py
src/naive_website/: asgi.py  settings.py  urls.py  wsgi.py
src/polls/: models.py  urls.py  views.py
src/polls/migrations/: 0001_initial.py
src/polls/templates/: detail.html
src/polls/templates/polls/: question.html  results.html
